fix: .hero-sumary item wrong position item is not center of group. Fix by make its align-item:center

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -149,6 +149,7 @@ a {
 
 .hero .hero-sumary .item {
   display: flex;
+  align-items: center;
 }
 
 .hero .hero-sumary .item + .item {
